--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h1 {
   display: flex;
   flex-direction: column;
   margin: 20px auto;
-  width: 90vh;
+  /* width: vh; */
   border-radius: 1%;
   background-color: rgb(223, 223, 223);
   padding: 10px;
@@ -19,7 +19,7 @@ h1 {
 h2 {
   background-color: white;
   padding: 5px;
-  border-radius: 1%;
+  border-radius: 2%;
   text-align: center;
   border-bottom: 2px solid rgb(148, 148, 148);
 }
@@ -36,8 +36,4 @@ h2 {
   text-align: center;
   border-radius: 3%;
 }
-img {
-  border-radius: 360%;
-  width: 360px;
-  height: 200px;
-}
+
